Fix(theme): remove media query `prefers-color-scheme` since we apply it by an input and can be broken on some brower blocking this media query (eg. Librewolf)

--- a/src/styles/themes/gruvbox/_index.scss
+++ b/src/styles/themes/gruvbox/_index.scss
@@ -10,3 +10,16 @@
     --accent-2: 323, 39%, 36%;
     --neutral: 39, 24%, 66%;
 }
+
+:root.dark {
+    --base: 53, 74%, 91%;
+    --base-lighter: 48, 87%, 88%;
+    --base-darker: 43, 59%, 81%;
+    --txtc: 20, 5%, 22%;
+    --red: 2, 75%, 46%;
+    --green: 60, 71%, 35%;
+    --yellow: 40, 73%, 49%;
+    --accent: 190, 89%, 22%;
+    --accent-2: 323, 39%, 36%;
+    --neutral: 39, 24%, 66%;
+}
